--- a/P8105_hw3_LL3407.Rmd
+++ b/P8105_hw3_LL3407.Rmd
@@ -36,17 +36,19 @@ ins_df2 =
 
 ```
 
-```{r,fig.width=10,fig.asp=5}
+```{r}
+
+```
 
 
+```{r}
 ins_high_scatter = 
     ins_df2%>% 
     ggplot(aes(x=aisle, y=number, color=aisle))+
     geom_point()+
     labs(
-      title = "The aisles with more than 10000 items ordered"
-      
-    )
+      title = "The aisles with more than 10000 items ordered")+
+    scale_x_continuous(name = waiver())
 
 ggsave(file = "./Results/ins_high_scatter.pdf",
        plot = ins_high_scatter,
@@ -54,4 +56,5 @@ ggsave(file = "./Results/ins_high_scatter.pdf",
        height=5)
 
 ```
+
 
