--- a/P8105_hw3_LL3407.md
+++ b/P8105_hw3_LL3407.md
@@ -1,20 +1,30 @@
----
-title: "p8105_hw3_LL3407"
-Name: Liping Lu
-Uni:  LL3407
-output: github_document
-date: "2022-10-07"
----
+p8105_hw3_LL3407
+================
+2022-10-07
 
-```{r}
+``` r
 library(p8105.datasets)
 data("instacart")
 
 library(tidyverse)
+```
+
+    ## -- Attaching packages --------------------------------------- tidyverse 1.3.2 --
+    ## v ggplot2 3.3.6      v purrr   0.3.4 
+    ## v tibble  3.1.8      v dplyr   1.0.10
+    ## v tidyr   1.2.0      v stringr 1.4.1 
+    ## v readr   2.1.2      v forcats 0.5.2 
+    ## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
+    ## x dplyr::filter() masks stats::filter()
+    ## x dplyr::lag()    masks stats::lag()
+
+``` r
 library(ggridges)
 ```
+
 ## Problem 1
-```{r}
+
+``` r
 ins_df = 
   instacart %>% 
   janitor::clean_names() %>% 
@@ -23,23 +33,19 @@ ins_df =
   maximum = ins_df %>% filter(nobs==max(nobs)) %>% view() 
 ```
 
-* There are 134 aisles in total.   
-* The "fresh vegetables" aisle is the most ordered from. 
+-   There are 134 aisles in total.  
+-   The “fresh vegetables” aisle is the most ordered from.
 
-```{r}
+``` r
 ins_df2 = 
   instacart %>% 
   janitor::clean_names() %>% 
   count(aisle) %>% 
   filter(n>10000) %>%
   mutate(number=as.numeric(n))
-
 ```
 
-
-
-
-```{r}
+``` r
 ins_high_scatter = 
     ins_df2%>% 
     ggplot(aes(x=aisle, y=number, color=aisle))+
@@ -51,10 +57,9 @@ ggsave(file = "./Results/ins_high_scatter.pdf",
        plot = ins_high_scatter,
        width=10, 
        height=5)
-
 ```
 
-```{r}
+``` r
 ins_df3 = 
   instacart %>% 
   janitor::clean_names() %>%
@@ -67,8 +72,10 @@ ins_df3 =
  view()
 ```
 
+    ## `summarise()` has grouped output by 'aisle'. You can override using the
+    ## `.groups` argument.
 
-```{r, eval=FALSE}
+``` r
 ins_df4 = 
   instacart %>% 
   janitor::clean_names() %>% 
